dnl Autoconf configure script for bkp
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/babel.ads)
AC_CANONICAL_SYSTEM
dnl AM_MAINTAINER_MODE
# Current release settings
BKP_MAJOR_VERSION=0
BKP_MINOR_VERSION=1
BKP_MICRO_VERSION=0
BKP_VERSION=$BKP_MAJOR_VERSION.$BKP_MINOR_VERSION.$BKP_MICRO_VERSION
# checking for local tools
AC_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_LN_S
AC_CHECK_PROGS(GNATMAKE, gnatmake, "")
# Set the version number of GtkAda
AC_SUBST(BKP_VERSION)
AC_SUBST(BKP_MAJOR_VERSION)
AC_SUBST(BKP_MINOR_VERSION)
AC_SUBST(BKP_MICRO_VERSION)
EXEC_PREFIX="$prefix"
AC_SUBST(EXEC_PREFIX)
BKP_LIBDIR="lib"
AC_SUBST(BKP_LIBDIR)

##########################################
# Ada Util library
##########################################
AM_GNAT_FIND_PROJECT([ada-util],[Ada Utility Library],[util],
  [git@github.com:stcarrez/ada-util.git],
  [Building Ada EL requires the Ada Utility Library.],
  [
    UTIL_DIR=${gnat_project_dir_util}
  ])
AC_SUBST(UTIL_DIR)

##########################################
# Ada Expression Language library
##########################################
AM_GNAT_FIND_PROJECT([ada-el],[Ada Expression Language Library],[el],
  [git@github.com:stcarrez/ada-el.git],
  [Building Ada Server Faces requires the Ada EL Library.],
  [
    EL_DIR=${gnat_project_dir_el}
  ])
AC_SUBST(EL_DIR)

##########################################
# Ada Database Objects library
##########################################
AM_GNAT_FIND_PROJECT([ada-ado],[Ada Database Objects],[ado],
  [git@github.com:stcarrez/ada-ado.git],
  [Building Dynamo requires the Ada Database Objects Library.],
  [
    ADO_DIR=${gnat_project_dir_ado}
  ])
AC_SUBST(ADO_DIR)

AC_OUTPUT(
Makefile babel.gpr samples.gpr babel_tests.gpr rules.mk
)
